fix: disabling scrolling causes layout to shift

--- a/apps/main/src/styles/global.css
+++ b/apps/main/src/styles/global.css
@@ -5,6 +5,10 @@
 	position: relative;
 }
 
+body {
+	@apply w-full
+}
+
 .nexment-admin-badge {
 	display: none !important;
 }
